--- a/Übung_06/aufgabe-flexbox-03.html
+++ b/Übung_06/aufgabe-flexbox-03.html
@@ -13,27 +13,53 @@
       .cre {
         width: 50px;
         height: 50px;
+        position: fixed;
+        border: 2px solid black;
         background-color: violet;
         border: 2px solid black;
+        right: 0%;
+        top: 0%;
+        position: fixed;
       }
       .cue {
         background-color: lightblue;
+        border: 2px solid black;
         width: 760px;
         height: 300px;
+        position: absolute;
+        text-align: left;
+        padding: 20px;
       }
       .cb {
         background-color: burlywood;
+        border: 2px solid black;
         width: 100px;
         height: 100px;
+        position: absolute;
+        right: 0%;
+        bottom: 0%;
       }
       .cge {
         background-color: yellow;
+        position: absolute;
+        display: flex;
+        width: 96%;
+        justify-content: space-between;
+        align-items: center;
+        justify-content: space-around;
+        padding: 20px;
+        border: 2px solid black;
+        margin-top: 400px
       }
       .cgr {
         width: 50px;
         height: 50px;
+        position: relative;
         background-color: green;
         border: 2px solid black;
+        display: flex;
+        justify-content: space-between;
+      margin: auto;
       }
     </style>
   </head>
