--- a/mrolympiaSite/index.html
+++ b/mrolympiaSite/index.html
@@ -8,6 +8,50 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="site">
+        <div class="head">
+            <img class="logo" src="logo.png" alt="">
+        </div>
+ <div class="menubox">
+        <div class="menu"> 
+            <div class="home">HOME</div>
+            <div class="home">TICKETS</div>
+            <div class="home">SCHEDULE</div>
+            <div class="home">EXHIBITOR/SPONSOR</div>
+            <div class="home">QUALIFIED</div>
+            <div class="home">EXPO EVENT</div>
+            <div class="home">O STORE</div>
+            <div class="home">PAY PREVIEW</div>
+            <ul class="links-list">
+                <li class="list-item">
+                  <a class="facebookhover" href="https://www.facebook.com/mrolympiallc" target="_blank" rel="me" class="facebook-icon">
+                    <i class="icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35 35"><g id="Layer_2" data-name="Layer 2"><g id="Capa_1" data-name="Capa 1"><path d="M33.07,0H1.86A1.86,1.86,0,0,0,0,1.86V33.14A1.86,1.86,0,0,0,1.86,35H18.69V21.45H14.13V16.16h4.56V12.27c0-4.52,2.76-7,6.8-7a38.24,38.24,0,0,1,4.07.21v4.73h-2.8c-2.19,0-2.61,1-2.61,2.57v3.37h5.23l-.68,5.28H24.15V35h9A1.86,1.86,0,0,0,35,33.14V1.93A1.93,1.93,0,0,0,33.07,0Z"/></g></g></svg>
+                    </i>
+                    <span class="hidden">Facebook</span>
+                  </a>
+                </li>
+                <li class="list-item">
+                  <a class="twitterhover" href="https://twitter.com/MrOlympiaLLC" target="_blank" rel="me" class="twitter-icon">
+                    <i class="icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35 35"><g id="Layer_2" data-name="Layer 2"><g id="Capa_1" data-name="Capa 1"><path d="M33.14,0H1.86A1.86,1.86,0,0,0,0,1.86V33.14A1.86,1.86,0,0,0,1.86,35H33.14A1.86,1.86,0,0,0,35,33.14V1.86A1.86,1.86,0,0,0,33.14,0ZM32,8.68a12,12,0,0,1-2.91,3c0,.23,0,.46,0,.69a16.74,16.74,0,0,1-16.91,16.9,16.79,16.79,0,0,1-9.1-2.67A.15.15,0,0,1,3,26.47a.14.14,0,0,1,.15-.09,13,13,0,0,0,1.39.08,11.55,11.55,0,0,0,6.91-2.26A6,6,0,0,1,6.23,20a.12.12,0,0,1,0-.14.15.15,0,0,1,.13,0,5.9,5.9,0,0,0,2,0,6.07,6.07,0,0,1-4.25-5.77V14a.18.18,0,0,1,.08-.13.17.17,0,0,1,.14,0,5.64,5.64,0,0,0,2.1.68A6,6,0,0,1,4.2,9.87a6.09,6.09,0,0,1,.82-3,.14.14,0,0,1,.11-.07.13.13,0,0,1,.13.05A16.58,16.58,0,0,0,17.1,12.91a6.34,6.34,0,0,1,0-2.6A5.75,5.75,0,0,1,19.32,7a6,6,0,0,1,8.05.57A11.59,11.59,0,0,0,31,6.14a.15.15,0,0,1,.16,0,.14.14,0,0,1,.05.16,6.07,6.07,0,0,1-2.12,3,11.26,11.26,0,0,0,2.72-.83.14.14,0,0,1,.16,0A.14.14,0,0,1,32,8.68Z"/></g></g></svg>
+                    </i>
+                    <span class="hidden">Twitter</span>
+                  </a>
+                </li>
+                <li class="list-item">
+                  <a class="instagramhover" href="https://www.instagram.com/MrOlympiaLLC" target="_blank" rel="me" class="instagram-icon">
+                    <i class="icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35 35"><g id="Layer_2" data-name="Layer 2"><g id="Capa_1" data-name="Capa 1"><path d="M24.3,16h2.2v9.44a1,1,0,0,1-1.05,1.05H9.55A1,1,0,0,1,8.5,25.45V16h2.2A7,7,0,1,0,24.46,17.5,6.67,6.67,0,0,0,24.3,16Zm-7.54,6.12a4.69,4.69,0,1,0-3.89-3.89A4.68,4.68,0,0,0,16.76,22.13Zm6.36-9.45h1.79a.94.94,0,0,0,.94-.95V10A1,1,0,0,0,24.91,9H23.12a1,1,0,0,0-.95.95v1.79A1,1,0,0,0,23.12,12.68ZM35,1.86V33.14A1.86,1.86,0,0,1,33.14,35H1.86A1.86,1.86,0,0,1,0,33.14V1.86A1.86,1.86,0,0,1,1.86,0H33.14A1.86,1.86,0,0,1,35,1.86Zm-6.35,7.3a2.81,2.81,0,0,0-2.81-2.81H9.16A2.81,2.81,0,0,0,6.35,9.16V25.84a2.81,2.81,0,0,0,2.81,2.81H25.84a2.81,2.81,0,0,0,2.81-2.81Z"/></g></g></svg>
+                    </i>
+                    <span class="hidden">Instagram</span>
+                  </a>
+                </li>
+              </ul>
+        </div>
+        </div>
+            <div class="ad">
+                <img class="addjpg"src="DAN-OLYMPIA-ORLANDO-2023-1200x520-.jpg" alt=""></div>
+    </div>
 </body>
 </html>
