--- a/Jassen(fertig)/Jassen/kontakt.html
+++ b/Jassen(fertig)/Jassen/kontakt.html
@@ -47,6 +47,7 @@
 </div>
     <div class="navbar2">
         <a href="https://www.instagram.com/noah_stesl/"><img src="87390.png" class="insta"></a>
+        <a href="https://www.instagram.com/simonxrapp/"><img src="87390.png" class="insta"></a>
     </div>
 <script src="kontakt.js"></script>
 </body>
