--- a/Jassen(fertig)/Jassen/info.html
+++ b/Jassen(fertig)/Jassen/info.html
@@ -16,7 +16,7 @@
         <a href="info.html" class="active">Über Uns</a>
         <a href="kontakt.html">Kontakt</a>
         <a href="geschichte.html">Geschichte</a>
-        <a href="https://www.jassa.at/regeln/">Login</a>
+        <a href="https://www.jassa.at/regeln/">Regeln</a>
     </nav>
     <p class="intro">Unser Team</p>
     <div class="names">
